--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 beautifulsoup4~=4.12.3
 fastapi~=0.115.12
-google-generativeai~=0.8.4
+google-genai~=1.21.1
 lxml~=5.3.2
 python-dotenv~=1.1.0
 requests~=2.32.3
